<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@drawable/bottom_sheet_stick"
        app:tint="@android:color/darker_gray" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/menu_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:divider="@drawable/divider"
            android:dividerPadding="16dp"
            android:showDividers="middle">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/settings"
                android:textSize="@dimen/font_xl"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/vibrate_when_scanned"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/settings_vibrate_when_scanned"
                    android:textSize="@dimen/font_l"
                    android:drawablePadding="16dp"
                    app:drawableStartCompat="@drawable/ic_round_vibration_24"
                    app:drawableTint="@android:color/black" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/exit_when_scanned"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/settings_exit_when_scanned"
                    android:textSize="@dimen/font_l"
                    android:drawablePadding="16dp"
                    app:drawableStartCompat="@drawable/ic_round_close_24"
                    app:drawableTint="@android:color/black" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/highest_brightness"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/settings_highest_brightness"
                    android:textSize="@dimen/font_l"
                    android:drawablePadding="16dp"
                    app:drawableStartCompat="@drawable/ic_round_brightness_high_24"
                    app:drawableTint="@android:color/black" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>