<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    tools:context=".ui.main.MainActivity">

    <ImageView
        android:id="@+id/setting_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="?selectableItemBackgroundBorderless"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_outline_settings_36"
        app:tint="@android:color/black" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:orientation="vertical"
        android:background="@drawable/bg_rounded"
        app:layout_constraintTop_toBottomOf="@id/setting_button"
        app:layout_constraintBottom_toTopOf="@id/barcode_view_overlay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constrainedHeight="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingTop="24dp"
            android:paddingBottom="8dp"
            android:layout_weight="1"
            android:gravity="center_horizontal|bottom"
            android:text="@string/home_title"
            android:textSize="@dimen/font_2l"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="1sp"
            android:autoSizeMaxTextSize="@dimen/font_2l" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingTop="8dp"
            android:paddingBottom="24dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/home_message"
            android:textSize="@dimen/font_l"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="1sp"
            android:autoSizeMaxTextSize="@dimen/font_l" />

    </LinearLayout>

    <com.journeyapps.barcodescanner.DecoratedBarcodeView
        android:id="@+id/barcode_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="@id/barcode_view_overlay"
        app:layout_constraintBottom_toBottomOf="@id/barcode_view_overlay"
        app:layout_constraintStart_toStartOf="@id/barcode_view_overlay"
        app:layout_constraintEnd_toEndOf="@id/barcode_view_overlay" />

    <ImageView
        android:id="@+id/barcode_view_overlay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        app:srcCompat="@drawable/bg_rounded_overlay"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintDimensionRatio="1:1" />

    <ImageView
        android:id="@+id/flashlight_button"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_margin="8dp"
        android:alpha=".5"
        android:visibility="gone"
        app:srcCompat="@drawable/ic_round_flash_off_36"
        app:layout_constraintTop_toTopOf="@id/barcode_view"
        app:layout_constraintEnd_toEndOf="@id/barcode_view"
        tools:visibility="visible" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sms_button"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/sms_1922"
        android:textAllCaps="true"
        android:textSize="@dimen/font_2l"
        app:layout_constraintTop_toBottomOf="@id/barcode_view_overlay"
        app:layout_constraintBottom_toTopOf="@id/about_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constrainedWidth="true"
        app:layout_constraintVertical_chainStyle="packed"
        app:icon="@drawable/ic_round_chat_36"
        app:iconSize="32dp"
        app:cornerRadius="32dp"
        app:elevation="8dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/about_button"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:text="@string/about"
        android:textSize="@dimen/font_2l"
        android:textAllCaps="true"
        app:layout_constraintTop_toBottomOf="@id/sms_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/sms_button"
        app:layout_constraintEnd_toEndOf="@id/sms_button"
        app:icon="@drawable/ic_round_info_36"
        app:iconSize="32dp"
        app:cornerRadius="32dp"
        app:elevation="8dp" />

</androidx.constraintlayout.widget.ConstraintLayout>